Fixed the bugs with the prev and next links in the mail view, they now won't jump to the outbox and now handles deleted emails.

--- a/tags/Fall 2011/web/OSBLE/Content/Site.css
+++ b/tags/Fall 2011/web/OSBLE/Content/Site.css
@@ -960,6 +960,11 @@ body#layoutLogOn
 	width: 750px;
 }
 
+.email_view_links
+{
+    width: 350px;
+}
+
 #add_update_users
 {
 	border: 1px solid #eeeeff;
